@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  13 Oct 2015; Marius Brehler <marbre@linux.sungazer.de>
+  matplotlib2tikz-0.1.0.ebuild, matplotlib2tikz-9999.ebuild:
+  dev-python/matplotlib2tikz: Cleanup ebuilds
+
 *matplotlib2tikz-0.2.0 (13 Oct 2015)
 
   13 Oct 2015; Marius Brehler <marbre@linux.sungazer.de>
